lab/yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${svc}
  namespace: ${ns}
spec:
  rules:
  - host: ${host}
    http:
      paths:
      - path: /
        backend:
          service:
            name: ${svc}
            port: 
              number: ${port}
        pathType: ImplementationSpecific
