lab/yaml/networkpolicy-for-elasticsearch.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
  labels:
    app.kubernetes.io/managed-by: Helm
  name: allow-eric-data-search-engine
spec:
  ingress:
  - {}
  podSelector:
    matchLabels:
      app.kubernetes.io/name: eric-data-search-engine
      role: ingest-tls
  policyTypes:
  - Ingress
